<resources>
    <string name="app_name">Reminder+QR</string>
    <string name="action_backup">Backup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="text_hint">Type here</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Canceled. (incomplete reminder)</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="back">Back</string>
    <string name="share">Share with other Reminder+QR users</string>
    <string name="loading">Loading...</string>
    <string name="backup_restore">Restore backup</string>
    <string name="sign_in_prompt">Click to sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel_authorisation">Cancel authorisation</string>
    <string name="login_prompt">Press Sign in with HUAWEI ID to log in</string>

</resources>